--- a/main.html
+++ b/main.html
@@ -25,8 +25,7 @@
 	<audio controls>
 	  <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
 	</audio>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
